# USAII_Global_AI_Hackathon_2026

./: .gitignore  External_Architecture_Gap_Analysis.md  Final_Database_Design_and_Tradeoff_Report_v3.docx  Final_External_Architecture_Conclusion_v8.docx  Hybrid_Conversation_Risk_Detection_Report_v18.docx  LICENSE  README.md  pyproject.toml  python_version.txt  requirements-training.txt  requirements.txt
backend/: config.py  main.py  paths.py  seed.py
backend/api/: deps.py  schemas.py
backend/audit/: service.py
backend/auth/: dependencies.py  roles.py  security.py
backend/db/: base.py  models.py  queries.py  state_machine.py
backend/explainability/: service.py
backend/jobs/: dlq.py  queue.py
backend/model_runtime/: job_runner.py  loader.py
backend/monitoring/: logging_setup.py  metrics.py
backend/preprocessing/: anonymize.py  pii_redaction.py
backend/rate_limit/: limiter.py
backend/retention/: deletion.py
data/: README.md
examples/: demo_safety_extraction.py  train_demo.py
frontend/: app.py
scripts/: eval_grooming_checkpoint.py  train_cyberbullying.py  train_grooming.py
src/risk_detection/: __init__.py  conversation.py
tests/: _tiny_bert.py  test_conversation.py  test_conversation_encoder.py  test_cyberbullying_pipeline.py  test_early_detection_head.py  test_emotion_mapping.py  test_emotion_score_head.py  test_grooming_pipeline.py  test_historical_state.py  test_historical_state_updater.py  test_integrated_pipeline.py  test_message_encoder.py  test_rules.py
tests/backend/: conftest.py  test_anonymize.py  test_audit_hash_chain.py  (+11 more)
(+73 files in other folders)
