[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-detection"
version = "0.1.0"
description = "Privacy-preserving AI decision-support system for detecting cyberbullying, online grooming, and early predator risk."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.69.0",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
